flareon-macros/tests/ui/attr_model_tuple.rs
use flareon::db::model;

#[model]
struct MyModel(i32, std::string::String, String, i32);

fn main() {}
